# Robot42

./: .env  .gitignore  AGENT_RUNTIME.md  INTEGRATION.md  ODOMETRY_TESTS.md  REAL_EXPLORATION_END_TO_END.md  RUNNING_EXPLORATION.md  RUN_NAV2_ROUTER_PLAYGROUND.md  SIMULATION_NAV2.md  SIMULATION_PLAY.md  SMOKE_TEST_END_TO_END_EXPLORATION.md  To Do Next Day:  remote_connection.md  the-initial-prompt.md  to-do.txt
Log/: OrbbecSDK.log.txt
artifacts/: exploration_map.json
command_reference/: README.md
config/: xlerobot_octomap.yaml
examples/: run_mock_voice_agent.py  use_xlerobot_agent.py  use_xlerobot_interface.py  xlerobot_agent_playground.py  xlerobot_brain_service.py  xlerobot_exploration_playground.py  xlerobot_exploration_review.py  xlerobot_inference_playground.py  xlerobot_interactive_exploration_playground.py  xlerobot_manipulation_playground.py  xlerobot_nav2_adapter_server.py  xlerobot_nav2_bridge_playground.py  xlerobot_offload_server.py  xlerobot_perception_server.py  xlerobot_training_playground.py
launch/: xlerobot_octomap.launch.py
multido_xlerobot/: __init__.py  bootstrap.py  interface.py  maniskill.py  types.py
plans/: orbbec_gemini2_point_cloud_occupancy_plan.md  testing_interactive_llm_frontier_playground.md  testing_nav2_bridge_connection.md  visual_semantic_waypoint_exploration.md  xlerobot_agent_architecture.md  xlerobot_exploration_mapping_plan.md
scripts/: render_xlerobot_nav2_params.py  run_xlerobot_maniskill_play.sh  setup_xlerobot_maniskill_env.sh  (+1 more)
tests/: test_offload.py  (+27 more)
tools/orbbec_rgb_test/: CMakeLists.txt  README.md  main.cpp
(+66 files in other folders)
